src/tests/fn_expression/snapshots/monkey_interpreter__tests__fn_expression__test_fn_expression_case_4_evaluation.snap
---
source: src/tests/fn_expression/mod.rs
expression: evaluation
---
Function {
    parameters: [
        "x",
        "y",
    ],
    block: Block {
        nodes: [
            Statement {
                statement: Return {
                    expression: Infix {
                        left_hand: Identifier {
                            identifier: "x",
                        },
                        operator: Plus,
                        right_hand: Identifier {
                            identifier: "y",
                        },
                    },
                },
            },
        ],
    },
    ..
}
