src/tests/fn_expression/snapshots/monkey_interpreter__tests__fn_expression__test_fn_expression_case_5_syntax_analysis.snap
---
source: src/tests/fn_expression/mod.rs
expression: abstract_syntax_tree
---
[
    Expression {
        expression: Function {
            parameters: [],
            block: Block {
                nodes: [],
            },
        },
    },
]
